fix z-index

--- a/packages/tagspaces-md/src/milkdown.css
+++ b/packages/tagspaces-md/src/milkdown.css
@@ -26,6 +26,10 @@
   color: var(--secondary);
 }
 
+.milkdown .slash-dropdown {
+  z-index: 5;
+}
+
 @media print {
   body {
     height: auto !important;
